2004-05-14  Paolo Carlini  <pcarlini@suse.de> 	    Ivan Godard  <igodard@pacbell.net>

PR libstdc++/15361
	* include/std/std_bitset.h (_Base_bitset<_Nw>::_M_do_find_next): Fix.
	* testsuite/23_containers/bitset/ext/15361.cc: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@81852 138bc75d-0d04-0410-961f-82ee72b054a4